objects/WundermanLogin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EditListOrderElements__c</fullName>
        <label>EditListOrderElements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndpointURL__c</fullName>
        <label>EndpointURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GetCountCriteria__c</fullName>
        <label>GetCountCriteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GetSession__c</fullName>
        <label>GetSession</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RefreshCount__c</fullName>
        <label>RefreshCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartCount__c</fullName>
        <label>StartCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WundermanListProductId__c</fullName>
        <description>WundermanListProductId</description>
        <label>WundermanListProductId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>WundermanLogin</label>
</CustomObject>